data/derived/comb/progs/unify/prog1793.ml.out
Characters 372-391:
  -> Format.sprintf ( exprToString e1 ) ^ "*" ^ ( exprToString e2 )
                    ^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         ('a, unit, string) format =
           ('a, unit, string, string, string, string)
           CamlinternalFormatBasics.format6
